--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,32 +1,10 @@
-.background-image{
-    background-image:url("src/assets/images/fondo2.jpg") ;
-     
-    background-size:cover;
-    overflow-y: hidden;
-    margin: 0px;
-    padding: 0px;
-
-    height: 100%;
-    width: 100%; 
-    position: absolute;
+.main-div{
+    display: block;
+    height: 100vh;
     align-items: center;
+    justify-content: center;
 }
 
-.background-form{
-    margin-top: 100px;
-    background-color: rgba(255, 255, 255 ,0.8);
-    width: 400px;
-    height: 350px;
-    font-size: 15px;
-    font-family: sans-serif;
-    border-radius: 10px;
-    align-items: center;
-}
-
-.form{
-    padding: 20px;
-}
-
-.btnEnviar{
-    margin-left: 150px;
+table {
+    width: 100%;
 }
