--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,5 +1,5 @@
 .main-div{
-    display: block;
+    display:block;
     height: 100vh;
     align-items: center;
     justify-content: center;
@@ -7,4 +7,17 @@
 
 table {
     width: 100%;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    width: 50px;
+    padding: 10px;
+}
+
+.add_button {
+    display: flex;
+    justify-content: flex-end;
+    padding: 10px;
 }
