Implements PUT method and create PutUserDialog component and desging

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -17,7 +17,9 @@ table {
 }
 
 .add_button {
-    display: flex;
+    display:block;
     justify-content: flex-end;
     padding: 10px;
+    padding-left: 90%;
+    font-size: 15px;
 }
