--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,9 @@
 <app-header></app-header>
 
-
 <mat-card class="main-div">
 
   <div class="add_button">
+    Agregar
     <button mat-fab color="primary" (click)="agregar()">
       <mat-icon>add_circle</mat-icon>
     </button>
