--- a/src/app/put-user-dialog/put-user-dialog.component.html
+++ b/src/app/put-user-dialog/put-user-dialog.component.html
@@ -1,6 +1,6 @@
-<h1 mat-dialog-title>Agregar Usuario</h1>
+<h1 mat-dialog-title>Modificar usuario</h1>
 <div mat-dialog-content>
-    <p>Introduzca los datos solicitados</p>
+    <p>Introduzca los datos a modificar</p>
     <form [formGroup]='User' class="form">
         <mat-form-field class="field">
             <mat-label>Nombre(s)</mat-label>
@@ -23,6 +23,6 @@
     </form>
   </div>
   <div mat-dialog-actions class="buttons">
-    <button mat-raised-button color="warn" (click)="closeDialog()">Cerrar</button>
-    <button mat-raised-button color="primary" [mat-dialog-close]="User.value" [disabled]="User.invalid">Agregar</button>
+    <button mat-raised-button color="warn" [mat-dialog-close]=null>Cerrar</button>
+    <button mat-raised-button color="primary" [mat-dialog-close]="User.value" [disabled]="User.invalid">Modificar</button>
   </div>
