--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -15,48 +15,9 @@
     width: 100%;
 }
 
-/* .background-form{
-    background-color: rgba(255, 255, 255 ,0.8);
-    width: 320px;
-    height: 520px;
-    font-size: 20px;
-    font-family: sans-serif;
-    border-radius: 10px;
-    align-items: center;
-}
-
-.input{
-    border: none;
-    border-bottom: 3px solid #000;
-    background: transparent;
-}
-
-.logoGoogle{
-    height: 25px;
-    width: 25px;
-}
-
-.btnGoogle{
-    margin-top: 25px;
-    margin-left: 30px;
-    background-color: #fff;
-    border: 1px;
-    border-style: solid;
-}
-
-.btnIniciarSesion{
-    margin-top: 25px;
-    margin-left: 80px;
-}
-
-.btnRegistrar{
-    margin-left: 110px;
-    font-family: sans-serif;
-    font-size: 15px;
-}
-
 .logo{
-    height: 150px;
-    margin-left: 70px;
-    margin-top: 10px;
-} */
+    padding-bottom: 25px;
+    width: 150px;
+    display: block;
+    margin: auto;
+}
