Register and Login component design

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,5 +15,6 @@
       <button class="example-full-width" [disabled]="loginFormGroup.invalid" mat-raised-button color="primary"
         (click)="login()">Login</button>
     </form>
+    <p class="btnRegistro">¿Aún no estás registrado? <a routerLink="/register">Registrarse</a></p>
   </mat-card>
 </div>
