--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -15,13 +15,24 @@
 
             <mat-form-field class="example-full-width">
                 <mat-label>Contraseña</mat-label>
-                <input matInput [type]="hide ? 'password' : 'text'" placeholder="Contraseña" formControlName="password">
-                <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-                    [attr.aria-pressed]="hide">
-                    <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                <input matInput [type]="hidePassword1 ? 'password' : 'text'" placeholder="Contraseña" formControlName="password1">
+                <button mat-icon-button matSuffix (click)="hidePassword1 = !hidePassword1" [attr.aria-label]="'Hide password'"
+                    [attr.aria-pressed]="hidePassword1">
+                    <mat-icon>{{hidePassword1 ? 'visibility_off' : 'visibility'}}</mat-icon>
                 </button>
             </mat-form-field>
 
+            <mat-form-field class="example-full-width">
+                <mat-label>Confirmar Contraseña</mat-label>
+                <input matInput [type]="hidePassword2 ? 'password' : 'text'" placeholder="Confirmar Contraseña" formControlName="password2">
+                <button mat-icon-button matSuffix (click)="hidePassword2 = !hidePassword2" [attr.aria-label]="'Hide password'"
+                    [attr.aria-pressed]="hidePassword2">
+                    <mat-icon>{{hidePassword2 ? 'visibility_off' : 'visibility'}}</mat-icon>
+                </button>
+            </mat-form-field>
+            <mat-error *ngIf="checkPassword()" class="matError">
+                Las contraseñas no coinciden
+            </mat-error>
             <button class="example-full-width" [disabled]="registerFormGroup.invalid" mat-raised-button
                 color="primary" (click)="signup()">Registrar</button>
         </form>
